# samples

./: .gitmodules  AOBench.cpp  CMakeLists.txt
async_launch/: CMakeLists.txt  async_launch.cpp  async_launch.h
atomic/: CMakeLists.txt  atomic.cpp  atomic.h
barrier/: CMakeLists.txt  barrier.cpp  barrier.h
bitfield/: CMakeLists.txt  bitfield.cpp
dot/: CMakeLists.txt  dot.cpp  dot.h
external_sm/: CMakeLists.txt  external_sm.cpp  external_sm.h
guarded_ops/: CMakeLists.txt  guarded_ops.cpp
indirect_access/: CMakeLists.txt  indirect.cpp  indirect.h
mandel/: CMakeLists.txt  mandel.cpp
matmul/: CMakeLists.txt  Makefile  cmake_install.cmake  matMul.cpp
msp_test/: CMakeLists.txt  vadd_msp.cpp  vadd_msp.h
nbody/: CMakeLists.txt  nbody.cpp
pi/: CMakeLists.txt  Makefile  cmake_install.cmake  pi.cpp
printf/: CMakeLists.txt  printf.cpp  printf.h
recurse/: CMakeLists.txt  recurse.cpp  recurse.h
rodinia/cfd/: CMakeLists.txt  euler3d.cpp  run  util.h
rodinia/hotspot/: CMakeLists.txt  hotspot.cpp  run
rodinia/hotspot/data/inputGen/: hotspotex.cpp  hotspotver.cpp
rodinia/lavaMD/: CMakeLists.txt  lavaMD.cpp
saxpy/: CMakeLists.txt  saxpy.cpp  saxpy.h
shoc/common/: BadCommandLine.h  CTimer.cpp  CTimer.h  CUDAPMSMemMgr.h  Graph.cpp  Graph.h  HostStencil.cpp  HostStencil.h  HostStencilFactory.cpp  HostStencilFactory.h  InitializeMatrix2D.cpp  InitializeMatrix2D.h  InvalidArgValue.cpp  InvalidArgValue.h  Matrix2D.cpp  Matrix2D.h  Matrix2DFileSupport.cpp  Matrix2DStatics.cpp  MultiNodeContainer.h  NodeIDList.h  NodePlatformContainer.h  Option.cpp  Option.h  OptionParser.cpp  OptionParser.h  PMSMemMgmt.h  PMSMemMgr.h  Platform.h  ProgressBar.cpp  ProgressBar.h  ResultDatabase.cpp  ResultDatabase.h  SerialStencilUtil.cpp  SerialStencilUtil.h  SerializableObject.h  Stencil.h  StencilFactory.cpp  StencilFactory.h  StencilUtil.cpp  StencilUtil.h  (+8 more)
shoc/level1/md5hash/: CMakeLists.txt  MD5Hash.cpp
shoc/level1/reduction/: CMakeLists.txt  Reduction.cpp  reduction_kernel.h
shoc/level1/triad/: CMakeLists.txt  Triad.cpp
slp/: CMakeLists.txt  slp.cpp  slp.h
std_vector/: CMakeLists.txt  std_vector.cpp
sum/: CMakeLists.txt  sum.cpp  sum.h
test/: CMakeLists.txt  test.cpp
vadd/: CMakeCache.txt  CMakeLists.txt  vadd.cpp  vadd.cpp.bc  vadd.h
vadd_low_level/: CMakeLists.txt  vadd_low_level.cpp  vadd_low_level.h
voronoi/: CMakeLists.txt  voro.cpp
